# text2image-producer

./: Dockerfile  README.md  pyproject.toml  server.py  test.py
src/: config.py  publisher.py  routes.py  routes_depends.py  tools.py
