[tool.poetry]
name = "text2image-producer"
version = "0.1.0"
description = ""
authors = ["kohei <koheitech001@gmail.com>"]
license = "Apach-2.0"
readme = "README.md"
packages = [{include = "text2image_producer"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
celery = "^5.2.7"
uvicorn = "^0.22.0"
redis = "^4.5.4"
pillow = "^9.5.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
